Updated application reporting stuff to handle the more general application URL instead of JNLP.

--- a/src/fr/jmmc/smprsc/data/stub/ApplicationReportingForm.form
+++ b/src/fr/jmmc/smprsc/data/stub/ApplicationReportingForm.form
@@ -51,7 +51,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="_jnlpUrlLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="JNLP URL:"/>
+            <Property name="text" type="java.lang.String" value="Application URL:"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
